--- a/styles/base.css
+++ b/styles/base.css
@@ -8,7 +8,9 @@
 }
 
 body {
-    color: var(--tertiary-color)
+    color: var(--tertiary-color);
+    max-width: 1000px;
+    
 }
 header {
     background-color: var(--secondary-color);
