--- a/week01/styles/chamber-site-plan.css
+++ b/week01/styles/chamber-site-plan.css
@@ -60,6 +60,10 @@ h2 {
     /* box-shadow: 3px, 3px, 5px, black; */
 }
 
+#wire-frame {
+    max-width: 100%;
+}
+
 .tangerine {
     font-family: tangerine;
     font-size: 2rem;
