Group meeting week 2 work

--- a/styles/base.css
+++ b/styles/base.css
@@ -58,6 +58,95 @@ nav ul {
     margin: 0;
 }
 
+/* small view navigation */
+#menu {
+	font-size: 1.5rem;
+	border: 0;
+	background: none;
+	color: #000;
+ 	position: absolute;
+	right: 1rem;
+	top: 1rem;
+}
+
+#menu::before {
+	content: "☰";
+}
+
+#menu.open::before {
+	content: "❎";
+}
+
+.navigation {
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+	/* background-color: #333;
+	color: #fff; */
+}
+
+.navigation a {
+	display: none;
+	padding: 1rem;
+	text-align: center;
+	text-decoration: none;
+	/* color: #fff; */
+}
+.navigation a:hover {
+	/* background-color: #bbb;
+	color: #333; */
+	font-weight: 700;
+}
+
+/* when the button is clicked - the open class is toggled (added/removed) */
+.open a {
+	display: block;
+}
+
+.active::before {
+	/* content: "📍";  just a wayfinding symbol for the user */
+}
+
+/* large view navigation ************************************/
+@media (min-width: 37.5em) {
+	h1 {
+		font-size: 2.5rem;
+		margin-left: 0;
+		text-align: center;
+	}
+	
+	h2 {
+		font-size: 2rem;
+		text-align: center;
+	}
+
+	#menu {
+		display: none; /* hide hamburger button */
+	}
+
+	.navigation {
+		flex-direction: row;
+	}
+
+	.navigation a {
+		display: block;
+		flex: 1 1 100%;
+	}
+	
+	.stuff {
+		margin: 1rem auto;
+	}
+}
+#mode {
+	position: absolute;
+	top: 1rem;
+	right: 3rem;
+	font-size: 3rem;
+	cursor: pointer;
+	font-size: 2rem;
+}
+
+
 main {
     background-color: var(--secondary-color);
     font-family: kalam;
@@ -94,7 +183,9 @@ h2 {
 .card p {
     margin: 1rem;
 }
-
+.card li {
+    font-size: 1.5rem;
+}
 
 footer {
     background-color: var(--quaternary-color);
