--- a/styles/base.css
+++ b/styles/base.css
@@ -213,3 +213,42 @@ footer {
 footer p {
     margin: 0;
 }
+
+/* Join Form Styling */
+.joinForm fieldset {
+    margin: .5rem;
+    border: 1rem solid;
+    border-color: var(--tertiary-color);
+    border-radius: 2rem;
+}
+
+.joinForm legend {
+    color: var(--tertiary-color);
+    padding: 0 .5rem;
+}
+
+.joinForm label {
+    display: block;
+    font-size: .9rem;
+    padding-top: .5rem;
+}
+
+.joinForm div {
+    padding-top: 1rem;
+    font-size: .9rem;
+
+}
+
+.joinForm input[type="text"],
+.joinForm input[type="email"],
+.joinForm input[type="tel"],
+.joinForm textarea
+{
+    background-color: var(--quaternary-color);
+    display: block;
+    border: solid 1px var(--tertiary-color);
+    border-radius: .5rem;
+    padding: .5rem;
+    /* margin-bottom: 1rem; */
+    width: 100%
+}
