--- a/styles/base.css
+++ b/styles/base.css
@@ -215,7 +215,7 @@ footer p {
 }
 
 /* Join Form Styling */
-.joinForm fieldset {
+.joinForm fieldset, .benefits div {
     margin: .5rem;
     border: 1rem solid;
     border-color: var(--tertiary-color);
@@ -246,9 +246,50 @@ footer p {
 {
     background-color: var(--quaternary-color);
     display: block;
-    border: solid 1px var(--tertiary-color);
+    border: solid 2px var(--tertiary-color);
     border-radius: .5rem;
-    padding: .5rem;
-    /* margin-bottom: 1rem; */
-    width: 100%
+    padding: .75rem;
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 400px;
+    overflow: auto;
+}
+
+.joinForm input[type="radio"] {
+    margin-right: .5rem;
+}
+
+.joinForm input[type="submit"] {
+    border: solid 2px var(--tertiary-color);
+    border-radius: .5rem;
+    margin-top: 1rem;
+    padding: .8rem;
+    width: 100%;
+    max-width: 400px;
+    box-shadow: 1px 1px 4px var(--tertiary-color);
+}
+
+.joinForm input:required {
+    border: solid 5px rgb(192, 0, 0);
+}
+
+.joinForm input:required:valid {
+    border: solid 5px var(--tertiary-color);
+
+}
+.joinSections {
+    display: grid;
+    grid-template-columns: 1fr;
+    
+}
+
+.benefits div {
+    overflow: hidden;
+}
+
+.benefits p {
+    margin: 1rem;
+}
+.benefits h2 {
+    text-size-adjust: small;
 }
